src/test/deca/syntax/valid/parser/extension/TAB_method_invocation_with_tab_arg.deca
{
    int[][] x = new int[1][2];
    float[] a = new float[8];
    a[0] = 89.0 * 5;
    f(a[0], x);
    f(x, a[0]);
    f(a[0], a[0]);
}