src/test/deca/syntax/invalid/test_dir/added/parser/cast_with_decl.deca
{(int) (float f = 1.0);}
